[tool.poetry]
name = "secstache"
version = "0.3.6"
description = ""
authors = ["Shinichi Urano"]

[tool.poetry.scripts]
secstache = "secstache:main"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.37"
argparse = "^1.4.0"
pystache = "^0.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
flake8 = "^4.0.1"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
